fix for buttons on mobile - second try

--- a/src/css/community.less
+++ b/src/css/community.less
@@ -93,6 +93,11 @@
       button {
         .rounded-button;
         min-width: 90px;
+
+        @media (max-width: @screen-xs) {
+          min-width: initial;
+          padding: 0 12px;
+        }
       }
     }
   }
